[tool.poetry]
name = "aws-fortuna"
version = "0.1.11"
description = "A Library for Uncertainty Quantification."
authors = ["Gianluca Detommaso <gianluca.detommaso@gmail.com>", "Alberto Gasparin <albgas@amazon.de>"]
license = "Apache-2.0"
readme = "README.rst"
documentation = "https://aws-fortuna.readthedocs.io/en/latest/"
packages = [{include = "fortuna"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flax = "^0.6.2"
optax = "^0.1.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
numpy = "^1.23.4"
tensorflow-cpu = { version = "^2.11.0", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "^2.11.0", markers = "sys_platform == 'darwin'" }
Sphinx = { version = "^5.3.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.19.5", optional = true }
nbsphinx = { version = "^0.8.10", optional = true }
nbsphinx-link = { version = "^1.3.0", optional = true }
sphinx-gallery = { version = "^0.11.1", optional = true }
pydata-sphinx-theme = { version = "^0.12.0", optional = true }
ipython = { version = "^8.7.0", optional = true }
jupyter = {version = "^1.0.0", optional = true}
pytest = { version = "^7.2.2", optional = true }
pytest-cov = {version="^4.0.0", optional = true}
scikit-learn = {version="^1.2.2", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "pydata-sphinx-theme", "nbsphinx", "nbsphinx-link",
    "sphinx-gallery", "ipython", "pandas", "tensorflow-datasets", "xlrd", "openpyxl", "yfinance", 'tabulate']
notebooks = ["jupyter"]

[tool.poetry.group.dev.dependencies]
traitlets = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
