[tool.poetry]
name = "aws-fortuna"
version = "0.1.31"
description = "A Library for Uncertainty Quantification."
authors = ["Gianluca Detommaso <gianluca.detommaso@gmail.com>", "Alberto Gasparin <albgas@amazon.de>"]
license = "Apache-2.0"
readme = "README.rst"
documentation = "https://aws-fortuna.readthedocs.io/en/latest/"
packages = [{include = "fortuna"}]

[tool.poetry.dependencies]
python = ">=3.8"
flax = "^0.6.2"
optax = "^0.1.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
numpy = "^1.23.4"
tensorflow-cpu = { version = "^2.11.0", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "^2.11.0", markers = "sys_platform == 'darwin'" }
Sphinx = { version = "^5.3.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.19.5", optional = true }
nbsphinx = { version = "^0.8.10", optional = true }
nbsphinx-link = { version = "^1.3.0", optional = true }
sphinx-gallery = { version = "^0.11.1", optional = true }
pydata-sphinx-theme = { version = "^0.12.0", optional = true }
ipython = { version = "^8.7.0", optional = true }
jupyter = {version = "^1.0.0", optional = true}
transformers = {version = "^4.28.1", optional = true}
datasets = {version = "^2.11.0", optional = true}
sagemaker-utils = {version = "^0.3.6", optional = true}
sagemaker = {version = "^2.161.0", optional = true}
boto3 = {version = "^1.26.145", optional = true}
hydra-core = {version = "^1.3.2", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "pydata-sphinx-theme", "nbsphinx", "nbsphinx-link",
    "sphinx-gallery", "ipython", "pandas", "tensorflow-datasets", "xlrd", "openpyxl", "yfinance", 'tabulate', 'pandoc']
notebooks = ["jupyter"]
transformers = ["transformers", "datasets"]
sagemaker = ["boto3", "hydra-core", "sagemaker", "sagemaker-utils"]

[tool.poetry.group.dev.dependencies]
traitlets = "^5.5.0"
pre-commit = "^3.3.1"
absolufy-imports = "^0.3.1"
codespell = "^2.2.4"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.2.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.docs.dependencies]
yfinance = "^0.2.12"
tabulate = "^0.9.0"
tensorflow-datasets = "^4.8.3"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
myst-nb = "^0.17.1"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 2
skip = 'docs'

[tool.codespell]
ignore-words-list = "ACI"
